# HDiffPatch

./: .gitignore  CHANGELOG.md  CODEBUDDY.md  README.md  README_cn.md
.codebuddy/rules/: ai-workflow.md  conventions.md  module-map.md  project-overview.md
.github/: pull_request_template.md
.github/workflows/: ci-build-ueplugins.yml  ci.yml  cmake-build.yml  cmake-multi-platform.yml
UEPlugins/PPakPatcher/: PPakPatcher.uplugin
UEPlugins/PPakPatcher/Source/PPakPatcher/: PPakPatcher.Build.cs
UEPlugins/PPakPatcher/Source/PPakPatcher/Private/: PPakPatcher.cpp  PPakPatcher.h  PPakPatcherModule.cpp  PPakPatcherSettings.cpp  PPakPatcherTask.cpp  PPatchManager.cpp
UEPlugins/PPakPatcher/Source/PPakPatcher/Private/Archive/: PPakMemoryArchive.cpp  PPakPatcherMemory.cpp  PSignedPakPatchWriter.cpp
UEPlugins/PPakPatcher/Source/PPakPatcher/Private/Data/: PBinPatchBody.cpp  PIoStorePatchBody.cpp  PPakFileData.cpp  PPakPacherDataType.cpp  PPakPatchBody.cpp  PPakPatchData.cpp  PPakPatcherDataType.cpp  PPakPatcherKeyChainHelper.cpp  PPatchManifestFile.cpp  PResPatchData.cpp  PUpdateManifestSummary.cpp
UEPlugins/PPakPatcher/Source/PPakPatcher/Private/HDiff/: PHDiffPatcher.cpp  PHDiffPatcher.h
UEPlugins/PPakPatcher/Source/PPakPatcher/Private/Patcher/: FPResPatcher.cpp  PIoStorePatcher.cpp  PPakPatcher.cpp
UEPlugins/PPakPatcher/Source/PPakPatcher/Private/UnitTest/: PPakPatcherUnitTest.cpp
UEPlugins/PPakPatcher/Source/PPakPatcher/Private/Utils/: PDebugMemoryBank.cpp  PPakPatcherPerfReport.cpp  PPakPatcherTaskRunner.cpp  PPakPatcherUtils.cpp
UEPlugins/PPakPatcher/Source/PPakPatcher/Public/: IPBinPatcher.h  IPPakPatcher.h  PPakPatcherModule.h  PPakPatcherSettings.h  PPakPatcherTask.h  PPatchManager.h
UEPlugins/PPakPatcher/Source/PPakPatcher/Public/Archive/: PPakMemoryArchive.h  PPakPatcherMemory.h  PSignedPakPatchWriter.h
UEPlugins/PPakPatcher/Source/PPakPatcher/Public/Data/: PBinPatchBody.h  PIoStorePatchBody.h  PPakFileData.h  PPakPacherDataType.h  PPakPatchBody.h  PPakPatchData.h  PPakPatcherDataType.h  PPakPatcherKeyChainHelper.h  PPatchManifestFile.h  PResPatchData.h  PUpdateManifestSummary.h
UEPlugins/PPakPatcher/Source/PPakPatcher/Public/Patcher/: FPResPatcher.h  IPBinPatcher.h  PIoStorePatcher.h  PPakPatcher.h
UEPlugins/PPakPatcher/Source/PPakPatcher/Public/UnitTest/: PPakPatcherUnitTest.h
UEPlugins/PPakPatcher/Source/PPakPatcher/Public/Utils/: PDebugMemoryBank.h  PPakPatcherPerfReport.h  PPakPatcherTaskRunner.h  PPakPatcherUtils.h
UEPlugins/PPakPatcher/Source/PPakPatcherEditor/: PPakPatcherEditor.Build.cs
UEPlugins/PPakPatcher/Source/PPakPatcherEditor/Private/: PPakPatcherCommandlet.cpp  PPakPatcherEditorModule.cpp
UEPlugins/PPakPatcher/Source/PPakPatcherEditor/Public/: PPakPatcherCommandlet.h  PPakPatcherEditorModule.h
build_libs/: CMakeLists.txt  CMakePresets.json  HDiffPatch.cpp  HDiffPatch.h
build_libs/cmake/: ue-linux-libcxx.toolchain.cmake
build_libs/include/: HDiffPatch.h
build_libs/source/: HDiffPatch.cpp
dirDiffPatch/dir_diff/: dir_diff_tools.cpp
docs/: README.md  api-reference.md  architecture.md  build-libs.md  ci-pipeline.md  commandlet-usage.md  faq.md  overview.md  runtime-patching.md  ueplugin-usage.md  upstream-patches.md
local_build_lib/: .gitignore  README.md  _common.py  build_all.py  local_build_android.py  local_build_harmonyos.py  local_build_ios.py  local_build_linux.py  local_build_macos.py  local_build_openharmony.py  local_build_windows.py
test/: CMakeLists.txt  hdiffpatch_test.cpp
testhdiffpatch/TestHDiffPatch/: TestHDiffPatch.sln
testhdiffpatch/TestHDiffPatch/TestHDiffPatch/: TestHDiffPatch.vcxproj
